--- a/galeria.html
+++ b/galeria.html
@@ -1,9 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Galeria Simon Habibi 🍌</title>
+
+<!-- Swiper CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 <style>
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -32,7 +37,7 @@
         background: rgba(255,255,255,0.15);
         border-radius: 20px;
         padding: 20px;
-        max-width: 800px;
+        max-width: 900px;
         width: 95%;
         text-align: center;
         box-shadow: 0 8px 32px rgba(0,0,0,0.2);
@@ -47,35 +52,24 @@
         margin-bottom: 15px;
     }
 
-    .gallery {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 15px;
-    }
-
-    .gallery img {
-        width: calc(33% - 10px);
-        max-width: 180px;
-        border-radius: 10px;
-        transition: transform 0.3s ease;
-    }
-
-    .gallery img:hover {
-        transform: scale(1.05);
-    }
-
-    iframe {
-        border-radius: 12px;
-        margin-top: 20px;
-        width: 90%;
+    /* Swiper container */
+    .swiper {
+        width: 100%;
         max-width: 600px;
-        height: 340px;
-        border: none;
+        border-radius: 15px;
+        overflow: hidden;
+        margin: auto;
     }
 
+    .swiper-slide img {
+        width: 100%;
+        display: block;
+        border-radius: 15px;
+    }
+
+    /* Botões */
     button {
-        background: #ff4e50;
+        background: #4a90e2; /* azul primário */
         color: white;
         border: none;
         padding: 12px 18px;
@@ -87,31 +81,22 @@
     }
 
     button:hover {
-        background: #f33d3d;
+        background: #357ab8;
     }
 
-    /* 📱 Ajustes para celular */
-    @media (max-width: 768px) {
-        h1 { font-size: 22px; }
-        .gallery img {
-            width: calc(50% - 10px); /* 2 por linha no tablet/cel maior */
-        }
+    iframe {
+        border-radius: 12px;
+        margin-top: 20px;
+        width: 100%;
+        max-width: 600px;
+        height: 340px;
+        border: none;
     }
 
     @media (max-width: 480px) {
-        h1 { font-size: 20px; }
-        .gallery img {
-            width: 100%; /* 1 por linha no celular pequeno */
-            max-width: none;
-        }
-        iframe {
-            height: 220px; /* vídeo mais baixo no celular */
-        }
-        button {
-            width: 100%;
-            font-size: 14px;
-            padding: 10px;
-        }
+        h1 { font-size: 22px; }
+        iframe { height: 220px; }
+        button { width: 100%; font-size: 14px; padding: 10px; }
     }
 </style>
 </head>
@@ -119,19 +104,33 @@
     <div class="overlay"></div>
     <div class="container">
         <h1>Galeria Simon Habibi 🍌</h1>
-        <div class="gallery">
-            <img src="https://i.ibb.co/Csr3QXS/Imagem-do-Whats-App-de-2024-03-01-s-15-12-04-0afb214d.jpg" alt="Imagem 1">
-            <img src="https://i.ibb.co/HGYgG83/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-af253c31.jpg" alt="Imagem 2">
-            <img src="https://i.ibb.co/mcZnjjd/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-640aa4b5.jpg" alt="Imagem 3">
-            <img src="https://i.ibb.co/D8fLGyq/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-a8e06333.jpg" alt="Imagem 4">
+
+        <!-- Carrossel -->
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="https://i.ibb.co/Csr3QXS/Imagem-do-Whats-App-de-2024-03-01-s-15-12-04-0afb214d.jpg" alt="Imagem 1"></div>
+                <div class="swiper-slide"><img src="https://i.ibb.co/HGYgG83/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-af253c31.jpg" alt="Imagem 2"></div>
+                <div class="swiper-slide"><img src="https://i.ibb.co/mcZnjjd/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-640aa4b5.jpg" alt="Imagem 3"></div>
+                <div class="swiper-slide"><img src="https://i.ibb.co/D8fLGyq/Imagem-do-Whats-App-de-2024-03-01-s-15-12-05-a8e06333.jpg" alt="Imagem 4"></div>
+            </div>
+
+            <!-- Navegação -->
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
 
+        <!-- Vídeo -->
         <iframe src="https://player.vimeo.com/video/1114939788?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
-        allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" title="Vídeo do WhatsApp"></iframe>
+        allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" 
+        title="Vídeo do WhatsApp"></iframe>
         
         <br>
         <button onclick="logout()">Sair</button>
     </div>
+
+<!-- Swiper JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script>
     if(sessionStorage.getItem("auth")!=="true"){
@@ -141,7 +140,22 @@
         sessionStorage.removeItem("auth");
         window.location.href="login.html";
     }
+
+    // Inicia carrossel
+    const swiper = new Swiper(".mySwiper", {
+        loop: true,
+        autoplay: { delay: 3000 },
+        pagination: { el: ".swiper-pagination", clickable: true },
+        navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
+        effect: "coverflow",
+        coverflowEffect: {
+            rotate: 30,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            slideShadows: true,
+        }
+    });
 </script>
 </body>
 </html>
-
