--- a/simon.html
+++ b/simon.html
@@ -10,13 +10,9 @@
         margin: 0; padding: 0;
         display: flex; justify-content: center; align-items: center;
         height: 100vh;
-        background: linear-gradient(135deg, #1e3c72, #2a5298); /* degradê azul moderno */
+        background: linear-gradient(135deg, #1e3c72, #2a5298);
     }
-
-    .overlay {
-        position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-        background: rgba(0,0,0,0.3);
-    }
+    .overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.3); }
 
     .container {
         position: relative; z-index: 2;
@@ -49,8 +45,7 @@
 
     .show-password { 
         cursor: pointer; font-size: 18px; 
-        position: absolute; right: 30px; margin-top: -42px; 
-        color: #fff; 
+        position: absolute; right: 30px; margin-top: -42px; color: #fff;
     }
 
     input[type="submit"] {
@@ -60,7 +55,6 @@
     }
     input[type="submit"]:hover { background: #357ab8; transform: scale(1.02); }
 
-    /* Toast estilizado */
     #toast {
         visibility: hidden;
         min-width: 250px;
@@ -87,7 +81,6 @@
         opacity: 1;
     }
 
-    /* 📱 Ajustes mobile */
     @media (max-width: 480px) {
         h1 { font-size: 22px; }
         .container { padding: 20px; }
@@ -111,7 +104,6 @@
     </form>
 </div>
 
-<!-- Toast -->
 <div id="toast"></div>
 
 <script>
@@ -123,10 +115,7 @@ function login() {
     toast.textContent = `✨ Bem-vindo(a), ${username}! 🍌`;
     toast.className = "show";
 
-    // Redireciona após 2s
-    setTimeout(() => {
-        window.location.href = "galeria.html";
-    }, 2000);
+    setTimeout(() => { window.location.href = "galeria.html"; }, 2000);
 
     return false;
 }
@@ -138,3 +127,4 @@ function togglePassword() {
 </script>
 </body>
 </html>
+
